--- a/Property_Renting_Application/templates/property/property_list.html
+++ b/Property_Renting_Application/templates/property/property_list.html
@@ -4,7 +4,7 @@
     <title></title>
 </head>
 <body>
-
+<h3>Property List</h3>
     {% for object in object_list %}
 
             Name:    {{ object.name }}<br>
