--- a/Property_Renting_Application/templates/registration/signup.html
+++ b/Property_Renting_Application/templates/registration/signup.html
@@ -2,6 +2,10 @@
 <html>
 <head>
     <title></title>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <script src="https://unpkg.com/gijgo@1.9.13/js/gijgo.min.js" type="text/javascript"></script>
+    <link href="https://unpkg.com/gijgo@1.9.13/css/gijgo.min.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
 <form method="post" enctype="multipart/form-data">
@@ -9,6 +13,12 @@
     
     {{ form.as_p }}
     
+    <script>
+        $('#id_date_of_birth').datepicker({
+            uiLibrary: 'bootstrap4'
+        });
+    </script>
+
     <button type="submit">Sign up</button>
   </form>
 
