--- a/Property_Renting_Application/templates/property/property_detail.html
+++ b/Property_Renting_Application/templates/property/property_detail.html
@@ -3,37 +3,67 @@
 {% load static %}
 {% block content %}
 
- <h2>Details</h2>
-{% if request.user.profile.roles == "Owner" %}
-    Name:    {{ object.name }}<br>
-    City:    {{ object.city }}<br>
-    Address: {{ object.address }}<br>
-    Size:    {{ object.size}}<br>
-    Prize    {{ object.prize}}<br>
-    Created by:  {{ object.created_by}}<br>
 
-    {% if object.property_img  %}
-        <img src="{{ object.property_img.url }}" width="400" height="200">
-    {% endif %}
+  <div class="container">        
+            <h2>Details</h2>
+          <table class="table table-striped">
+            <thead>
+              <tr>
+                <th></th>
+                <th>Name</th>
+                <th>City</th>
+                <th>Address</th>
+                <th>Size</th>
+                <th>Prize</th>
+                <th>Created by</th>
+              </tr>
+            </thead>
+            <tbody>
+                {% if request.user.profile.roles == "Owner" %}
 
-{% endif %} 
-{% if request.user.profile.roles == "Renter" %}
-    Name:    {{ object.name }}<br>
-    City:    {{ object.city }}<br>
-    Address: {{ object.address }}<br>
-    Size:    {{ object.size}}<br>
-    Prize    {{ object.prize}}<br>
-    Created by:  {{ object.created_by}}<br>
+                   
+            <tr>
+                   <td> {% if object.property_img  %}
+                   <a href="{% url 'property:property-detail' object.id %}">
+                   <img src="{{ object.property_img.url }}" width="400" height="200">
+                   </a>
+                   {% endif %}</td>
+                   <td>{{ object.name }}</td>
+                   <td>{{ object.city }}</td>
+                   <td> {{ object.address }}</td>
+                   <td>{{ object.size }}</td>
+                   <td> {{ object.prize }}</td>
+                   <td>{{ object.created_by }}</td>
+                   
 
-    {% if object.property_img  %}
-        <img src="{{ object.property_img.url }}" width="400" height="200">
-    {% endif %}
+                  </tr>
+               
+                {% else %}
+                
+            <tr>
+                   <td> {% if object.property_img  %}
+                   <a href="{% url 'property:property-detail' object.id %}">
+                   <img src="{{ object.property_img.url }}" width="400" height="200">
+                   </a>
+                   {% endif %}</td>
+                   <td>{{ object.name }}</td>
+                   <td>{{ object.city }}</td>
+                   <td> {{ object.address }}</td>
+                   <td>{{ object.size }}</td>
+                   <td> {{ object.prize }}</td>
+                   <td>{{ object.created_by }}</td>
+                   <td><button type="button" id="intrested_renter" data-id="{{property.id}}" data-user_id="{{request.user.id}}" data-url="{% url 'property:property-renter-intreted' %}" >Apply</button></td>
+                  </tr>
 
-    <button type="button" id="intrested_renter" data-id="{{property.id}}" data-user_id="{{request.user.id}}" data-url="{% url 'property:property-renter-intreted' %}" >Apply</button>
-    
-{% endif %}
+                {%endif%}
+            </tbody>
+          </table>
+        </div>
+
 
 {% endblock %}
+
+
  {% block script %}
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
 
@@ -73,6 +103,3 @@ $(document).ready( function() {
 </script>
 
 {% endblock %}
-
-</body>
-</html>
