--- a/Property_Renting_Application/templates/property/property_list.html
+++ b/Property_Renting_Application/templates/property/property_list.html
@@ -3,49 +3,68 @@
 {% load static %}
 {% block content %}
 
-<h3>Property List</h3>
-{% if request.user.profile.roles == "Owner" %}
-    {% for object in object_list %}
-            Name:    {{ object.name }}<br>
-            City:    {{ object.city }}<br>
-            Address: {{ object.address }}<br>
-            Size:    {{ object.size}}<br>
-            Prize    {{ object.prize}}<br>
-            Created by:  {{ object.created_by}}<br>
-            {% if object.property_img  %}
-                <a href="{% url 'property:property-detail' object.id %}">
-                <img src="{{ object.property_img.url }}" width="400" height="200">
-                </a>
-            {% endif %}
 
-<a href="{% url 'property:property-update' object.id %}">Update</a>
-<a href="{% url 'property:property-delete' object.id %}">Delete</a>
-<br>
-------------------------------------------------------------------------------------------------  <br>       
-    {% endfor %}
-{% endif %}
-{% if request.user.profile.roles == "Renter" %}
-    {% for object in object_list %}
-            Name:    {{ object.name }}<br>
-            City:    {{ object.city }}<br>
-            Address: {{ object.address }}<br>
-            Size:    {{ object.size}}<br>
-            Prize    {{ object.prize}}<br>
-            Created by:  {{ object.created_by}}<br>
-            {% if object.property_img  %}
-                <a href="{% url 'property:property-detail' object.id %}">
-                <img src="{{ object.property_img.url }}" width="400" height="200">
-                </a>
-            {% endif %}
-<button type="button" onclick="alert('Hello world!')">Apply</button>
-<br>
+            
+        <div class="container">        
+            <h2>Property List</h2>
+          <table class="table table-striped">
+            <thead>
+              <tr>
+                <th></th>
+                <th>Name</th>
+                <th>City</th>
+                <th>Address</th>
+                <th>Size</th>
+                <th>Prize</th>
+                <th>Created by</th>
+              </tr>
+            </thead>
+            <tbody>
+                {% if request.user.profile.roles == "Owner" %}
+                    {% for object in object_list %}
+            <tr>
+                   <td> {% if object.property_img  %}
+                   <a href="{% url 'property:property-detail' object.id %}">
+                   <img src="{{ object.property_img.url }}" width="400" height="200">
+                   </a>
+                   {% endif %}</td>
+                   <td>{{ object.name }}</td>
+                   <td>{{ object.city }}</td>
+                   <td> {{ object.address }}</td>
+                   <td>{{ object.size }}</td>
+                   <td> {{ object.prize }}</td>
+                   <td>{{ object.created_by }}</td>
+                   <td><a href="{% url 'property:property-update' object.id %}">Update</a>/<a href="{% url 'property:property-delete' object.id %}">Delete</a></td>
 
-------------------------------------------------------------------------------------------------  <br>       
-    {% endfor %}
-{% endif %}
+                  </tr>
+                {% endfor %}
+                {% else %}
+                {% for object in object_list %}
+            <tr>
+                   <td> {% if object.property_img  %}
+                   <a href="{% url 'property:property-detail' object.id %}">
+                   <img src="{{ object.property_img.url }}" width="400" height="200">
+                   </a>
+                   {% endif %}</td>
+                   <td>{{ object.name }}</td>
+                   <td>{{ object.city }}</td>
+                   <td> {{ object.address }}</td>
+                   <td>{{ object.size }}</td>
+                   <td> {{ object.prize }}</td>
+                   <td>{{ object.created_by }}</td>
+                   
+
+                  </tr>
+
+                  {% endfor %}
+
+                {%endif%}
+            </tbody>
+          </table>
+        </div>
+
+
 {% endblock %}
 
 
-</body>
-</html>
 
