--- a/Property_Renting_Application/templates/layout/top-menu.html
+++ b/Property_Renting_Application/templates/layout/top-menu.html
@@ -46,6 +46,7 @@
                 <li><a href="/property/list/">Properity List</a></li>
               </ul>
             </li>
+            <li><a href="/approve/renter">Approved Property List</a></li>
             <li class="drop-down"><a href="">Setting</a>
               <ul>
                 <li><a href="/login/">Logout</a></li>
