--- a/Property_Renting_Application/templates/property/intrested_renter.html
+++ b/Property_Renting_Application/templates/property/intrested_renter.html
@@ -31,7 +31,10 @@
                    <td>{{ object.properties.created_by}}</td>
                    <td>{{object.user.username}}</td>
                    <td>{{object.user.profile.phone}}</td>
-             
+                  
+               
+              
+                   <td><button type="button" class="approve_renter" data-id="{{ object.properties.id }}" data-user_id="{{object.user.id}}" data-url="{% url 'property:property-approve-renter' %}" >Approve</button></td>
                   </tr>
                 {%endfor%}
             </tbody>
@@ -39,3 +42,41 @@
         </div>
 
         {% endblock %}
+
+
+
+  {% block script %}
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
+
+<script type="text/javascript">
+
+$(document).ready( function() { 
+
+       $(".approve_renter").on('click',function(e){
+        e.preventDefault();
+        
+        var url = $(this).data('url');
+        var object_id = $(this).data('id');
+        var user_id = $(this).data('user_id');
+
+        
+        $.ajax({
+        type: "POST",
+        url: url,
+        headers:{
+            "X-CSRFToken": '{{csrf_token}}' 
+        },
+        dataType: "json",
+        data: {"object_id":object_id,"user_id":user_id},
+        success: function(response) {
+              
+                   alert('Successfully approved')
+
+         },
+        });
+    });
+});
+
+</script>
+
+{% endblock %}
