--- a/Property_Renting_Application/templates/property/property_detail.html
+++ b/Property_Renting_Application/templates/property/property_detail.html
@@ -15,6 +15,7 @@
                 <th>Address</th>
                 <th>Size</th>
                 <th>Prize</th>
+                <th>Type of property</th>
                 <th>Created by</th>
               </tr>
             </thead>
@@ -33,6 +34,7 @@
                    <td> {{ object.address }}</td>
                    <td>{{ object.size }}</td>
                    <td> {{ object.prize }}</td>
+                   <td> {{ object.type_of_property }}</td>
                    <td>{{ object.created_by }}</td>
                    
 
@@ -51,6 +53,7 @@
                    <td> {{ object.address }}</td>
                    <td>{{ object.size }}</td>
                    <td> {{ object.prize }}</td>
+                   <td> {{ object.type_of_property }}</td>
                    <td>{{ object.created_by }}</td>
                    <td><button type="button" id="intrested_renter" data-id="{{property.id}}" data-user_id="{{request.user.id}}" data-url="{% url 'property:property-renter-intreted' %}" >Apply</button></td>
                   </tr>
