--- a/Property_Renting_Application/templates/property/intrested_renter.html
+++ b/Property_Renting_Application/templates/property/intrested_renter.html
@@ -21,6 +21,7 @@
               </tr>
             </thead>
             <tbody>
+             
                 {% for object in intrested_renter %}
             <tr>
                    <td>{{ object.properties.name }}</td>
@@ -32,20 +33,21 @@
                    <td>{{object.user.username}}</td>
                    <td>{{object.user.profile.phone}}</td>
                   
-               
-              
-                   <td><button type="button" id="{{ object.properties.id }}" class="approve_renter" data-id="{{ object.properties.id }}" data-user_id="{{object.user.id}}" data-url="{% url 'property:property-approve-renter' %}" >Approve</button></td>
+                  {% if object.approve == True %}
+                    <td><button type="button" disabled="true">Approved</button></td>
+                  {% else %}
+                     <td><button type="button" id="{{ object.properties.id }}" class="approve_renter" data-id="{{ object.properties.id }}" data-user_id="{{object.user.id}}" data-url="{% url 'property:property-approve-renter' %}" >Approve</button></td>
+                  {% endif %}
+                
                   </tr>
                 {%endfor%}
+             
             </tbody>
           </table>
+          
         </div>
 
-
-
-
         {% endblock %}
-
 
 
   {% block script %}
@@ -73,11 +75,15 @@ $(document).ready( function() {
         data: {"object_id":object_id,"user_id":user_id},
         success: function(response) { 
                   if(response.status == true){
-                   alert('already approved')
-                 }else{
+                    
                    alert('Successfully approved')
+                  
+                  document.getElementById(object_id).innerHTML="Approved";
+                  document.getElementById(object_id).disabled = true;
+                
 
-                 } 
+                 }
+                 
                    
                   
 
