intregrated linked in functionality

--- a/Property_Renting_Application/templates/registration/login.html
+++ b/Property_Renting_Application/templates/registration/login.html
@@ -73,8 +73,13 @@
                 <a href="{% url 'social:begin' 'facebook' %}">Login with Facebook</a>
             </button>
             <button class="btn btn-info mb-2">
-
-                <a href="#">Login with LinkedIn</a>
+                <a href="{% url 'social:begin' 'linkedin-oauth2' %}">Login with LinkedIn</a>
+            </button>
+            <button class="btn btn-info mb-2">
+                <a href="#">Login with Gmail</a>
+            </button>
+            <button class="btn btn-info mb-2">
+                <a href="#">Login with Twitter</a>
             </button>
         </div>
     </div>
