--- a/Property_Renting_Application/templates/registration/login.html
+++ b/Property_Renting_Application/templates/registration/login.html
@@ -76,7 +76,7 @@
                 <a href="{% url 'social:begin' 'linkedin-oauth2' %}">Login with LinkedIn</a>
             </button>
             <button class="btn btn-info mb-2">
-                <a href="#">Login with Gmail</a>
+                <a href="{% url 'social:begin' 'google-oauth2' %}">Login with Gmail</a>
             </button>
             <button class="btn btn-info mb-2">
                 <a href="#">Login with Twitter</a>
