--- a/Property_Renting_Application/templates/registration/login.html
+++ b/Property_Renting_Application/templates/registration/login.html
@@ -81,6 +81,10 @@
             <button class="btn btn-info mb-2">
                 <a href="#">Login with Twitter</a>
             </button>
+             <button class="btn btn-danger  mb-2">
+            <a href="{% url 'social:begin' 'instagram' %}">Login with Instagram</a>
+        </button>
+        </button>
         </div>
     </div>
     </div>
